--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@babel/traverse": "^7.1.4",
+    "babel": "^6.23.0",
+    "babel-extract-comments": "^1.0.0",
+    "babylon": "^6.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
