--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-extract-comments": "^1.0.0",
     "babylon": "^6.18.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "csv": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
