--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "git-diff": "^2.0.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lodash": "^4.17.11",
