--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@babel/traverse": "^7.1.4",
+    "axios": "^0.19.0",
     "babel": "^6.23.0",
     "babel-extract-comments": "^1.0.0",
     "babylon": "^6.18.0",
